Added airspeed and altitude

--- a/templates/helistunts.html
+++ b/templates/helistunts.html
@@ -4,29 +4,9 @@
 /*{% block tz_app_title_name %}*/Helistuuuuunts/*{% endblock %}*/
 
 /*{% block tz_app_html_controls %}*/
-<div class="html-control control-checkbox">
-    <span class="control-title">Toggle colored lights</span>
-    <input type="checkbox" id="checkbox-colored">
-</div>
 
-<div class="html-control control-radio">
-    <form action="">
-        <fieldset>
-            <legend>Lights type</legend>
-            <span>Directional</span><input type="radio" id="radio-directional"><br>
-            <span>Point</span><input type="radio" id="radio-point"><br>
-            <span>Spot</span><input type="radio" id="radio-spot"><br>
-        </fieldset>
-    </form>
-</div>
-
-<div class="html-control control-checkbox">
-    <span class="control-title">Toggle grayscale effect</span>
-    <input type="checkbox" id="checkbox-post">
-</div>
-
-<div class="html-control control-output-pair">Air speed: <strong id="airspeed" class="control-output"></strong></div>
-<div class="html-control control-output-pair">Height: <strong id="height" class="control-output"></strong></div>
+<div class="html-control control-output-pair">Altitude: <strong id="altitude" class="control-output"></strong></div>
+<div class="html-control control-output-pair">Air speed: <strong id="airSpeed" class="control-output"></strong></div>
 
 <div class="engine-control">
 <table cellspacing="0">
