Added boxes to topple

--- a/templates/helistunts.html
+++ b/templates/helistunts.html
@@ -5,6 +5,10 @@
 
 /*{% block tz_app_html_controls %}*/
 
+<div class="html-control control-output-pair">GPS x: <strong id="gpsX" class="control-output"></strong></div>
+<div class="html-control control-output-pair">GPS y: <strong id="gpsY" class="control-output"></strong></div>
+<div class="html-control control-output-pair">GPS z: <strong id="gpsZ" class="control-output"></strong></div>
+
 <div class="html-control control-output-pair">Altitude: <strong id="altitude" class="control-output"></strong></div>
 <div class="html-control control-output-pair">Air speed: <strong id="airSpeed" class="control-output"></strong></div>
 
