Moved sensor code into sensor object

--- a/templates/helistunts.html
+++ b/templates/helistunts.html
@@ -12,6 +12,8 @@
 <div class="html-control control-output-pair">Altitude: <strong id="altitude" class="control-output"></strong></div>
 <div class="html-control control-output-pair">Air speed: <strong id="airSpeed" class="control-output"></strong></div>
 
+<div class="html-control control-output-pair">Active sensor: <strong id="activeSensor" class="control-output"></strong></div>
+
 <div class="engine-control">
 <table cellspacing="0">
 <tbody>
